[gd_scene load_steps=3 format=2]

[ext_resource path="res://physics/2d/object/laser.tscn" type="PackedScene" id=1]
[ext_resource path="res://physics/2d/object/timed_laser.gd" type="Script" id=2]

[node name="TimedLaser" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="ActiveTimer" type="Timer" parent="." index="2"]
wait_time = 0.6
one_shot = true

[node name="CooldownTimer" type="Timer" parent="." index="3"]
wait_time = 0.01
one_shot = true

[connection signal="timeout" from="ActiveTimer" to="." method="_on_ActiveTimer_timeout"]
